[package]
name = "julia"
version = "0.1.0"
authors = ["Szymon Walter <walter.szymon.98@gmail.com>"]
license = "ZLIB License"
readme = "README.md"
keywords = ["julia", "julialang", "julia-lang", "lang", "language", "scripting", "script"]
repository = "https://github.com/pi-pi3/julia-rs"
homepage = "https://github.com/pi-pi3/julia-rs"
documentation = "https://docs.rs/julia-rs"
categories = ["api-bindings"]
description = """
Idiomatic and safe Julia bindings for Rust
"""

[dependencies]
libc = "0.2"
smallvec = "0.5"
rustyline = { git = "https://github.com/kkawakam/rustyline" }
colored = "1.6"

[dependencies.julia-sys]
path = "julia-sys"

[[bin]]
name = "julia-rs"
path = "src/main.rs"
