[package]
name = "julia"
version = "0.2.5"
authors = ["Szymon Walter <walter.szymon.98@gmail.com>"]
license = "Zlib"
readme = "README.md"
keywords = ["julia", "lang", "scripting", "script"]
repository = "https://github.com/pi-pi3/julia-rs"
homepage = "https://github.com/pi-pi3/julia-rs"
documentation = "https://docs.rs/julia"
categories = ["api-bindings"]
description = """
Idiomatic and safe Julia bindings for Rust
"""

[dependencies]
libc = "0.2"
smallvec = "0.5"
colored = "1.6"
liner = "0.4"
clap = "2.25"

[dependencies.julia-sys]
version = "0.2"
path = "julia-sys"

[[bin]]
name = "julia-rs"
path = "src/main.rs"
