[package]
name = "julia-sys"
version = "0.2.0"
edition = "2015"
authors = ["Szymon Walter <walter.szymon.98@gmail.com>"]
license = "Zlib"
keywords = ["julia", "lang", "scripting", "ffi", "sys"]
repository = "https://github.com/pi-pi3/julia-rs"
homepage = "https://github.com/pi-pi3/julia-rs"
documentation = "https://docs.rs/julia-sys"
categories = ["external-ffi-bindings"]
description = """
Raw FFI bindings to the Julia API
"""

[build-dependencies]
bindgen = "0.31"

[dependencies]
libc = "0.2"
